--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>CV</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="//at.alicdn.com/t/font_8d5l8fzk5b87iudi.css">
 </head>
 <body>
   <div class="topNavBar clearfix">
@@ -24,7 +25,52 @@
       </ul>
     </nav>
   </div>
-
+  <div class="banner">
+    <div class="mask"></div>
+  </div>
+  <main>
+    <div class="user-card">
+      <div class="profile clearfix">
+        <div class="picture">
+          <img src="../img/avatar.jpg" alt="">
+        </div>
+        <div class="personal-info">
+          <span class="welcome">Hello
+            <span class="triangle"></span>
+          </span>
+          <h1>王蕾</h1>
+          <p>前端工程师</p>
+          <hr>
+          <div class="text clearfix">
+            <div class="title">
+              <div>年龄</div>
+              <div>所在城市</div>
+              <div>Email</div>
+              <div>联系方式</div>
+            </div>
+            <div class="data">
+              <div>30</div>
+              <div>上海</div>
+              <div>373434324@qq.com</div>
+              <div>13000000000</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer class="media">
+        <a href="#">
+          <i class="iconfont icon-weixin"></i>
+        </a>
+        <a href="#">
+          <i class="iconfont icon-weibo"></i>
+        </a>
+        <a href="#">
+          <i class="iconfont icon-github"></i>
+        </a>
+      </footer>
+    </div>
+    
+  </main>
 
 </body>
 </html>
