更新图片地址

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
     <div class="user-card">
       <div class="profile clearfix">
         <div class="picture">
-          <img src="../img/avatar.jpg" alt="">
+          <img src="./img/avatar.jpg" alt="">
         </div>
         <div class="personal-info">
           <span class="welcome">Hello
             <span class="triangle"></span>
           </span>
-          <h1>王蕾</h1>
+          <h1>晨曦</h1>
           <p>前端工程师</p>
           <hr>
           <div class="text clearfix">
