--- a/index.html
+++ b/index.html
@@ -69,8 +69,65 @@
         </a>
       </footer>
     </div>
-    
+    <p class="download-wrapper">
+      <a href="#" class="download-cv">下载PDF简历</a>
+    </p>
+    <p class="self-introduction">
+      晨曦，一名正在努力学习的前端开发工程师,目前致力于全栈方向的学习,希望可以和大家一起交流技术,共同进步。
+      <br>技能：前端开发
+    </p>
   </main>
+
+  <section class="skills">
+    <h2>技能</h2>
+    <ul class="clearfix">
+      <li>
+        <h3>HTML&CSS</h3>
+        <div class="progress-bar">
+          <div class="progress"></div>
+        </div>
+      </li>
+      <li>
+        <h3>JavaScript</h3>
+        <div class="progress-bar">
+          <div class="progress"></div>
+        </div>
+      </li>
+      <li>
+        <h3>JQuery</h3>
+        <div class="progress-bar">
+          <div class="progress"></div>
+        </div>
+      </li>
+      <li>
+        <h3>Vue</h3>
+        <div class="progress-bar">
+          <div class="progress"></div>
+        </div>
+      </li>
+      <li>
+        <h3>React</h3>
+        <div class="progress-bar">
+          <div class="progress"></div>
+        </div>
+      </li>
+      <li>
+        <h3>HTTP</h3>
+        <div class="progress-bar">
+          <div class="progress"></div>
+        </div>
+      </li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>作品集</h2>
+    <ul>
+      <li>所有</li>
+      <li>框架</li>
+      <li>原生JS</li>
+    </ul>
+  </section>
 
 </body>
 </html>
