--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
           </a>
           <nav class="navBar menu">
             <ul class="clearfix">
-              <li><a href="#">关于</a></li>
-              <li><a href="#">技能</a></li>
+              <li><a href="#siteAbout">关于</a></li>
+              <li><a href="#siteSkills">技能</a></li>
               <li class="menu-trigger">
-                <a href="#">作品</a>
+                <a href="#siteProductions">作品</a>
                 <ul class="submenu">
                   <li>作品1</li>
                   <li>作品2</li>
@@ -101,7 +101,7 @@
     <div class="mask"></div>
   </div>
   <main>
-    <div class="user-card">
+    <div id="siteAbout" class="user-card">
       <div class="profile clearfix">
         <div class="picture">
           <img src="./img/avatar.jpg" alt="">
@@ -150,7 +150,7 @@
     </p>
   </main>
 
-  <section class="skills">
+  <section id="siteSkills" class="skills">
     <h2>技能</h2>
     <ul class="clearfix">
       <li>
@@ -192,7 +192,7 @@
     </ul>
   </section>
 
-  <section>
+  <section id="siteProductions" class="productions">
     <h2>作品集</h2>
     <ul>
       <li>所有</li>
